--- a/ReimbursementWebApp/ReimbursementWebApp/Views/Auth/LoginPage.cshtml
+++ b/ReimbursementWebApp/ReimbursementWebApp/Views/Auth/LoginPage.cshtml
@@ -153,7 +153,7 @@
                     <p class="mb-0 text-secondary">
                         Copyright © <script>
                                         document.write(new Date().getFullYear())
-                        </script> Soft by Creative Tim.
+                        </script> Kelompok 1 DTS - Metrodata Academy.
                     </p>
                 </div>
             </div>
